@@ -1,3 +1,8 @@
+2009-03-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/c-indenter.c:
+	Manage indentation and relocations in switch ().
+
 2009-03-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/c-indenter.c:
